// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Backdrop With Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="sc-bczRLJ ezIvBU"
  color="primary"
  disabled={true}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Docs 1`] = `
<button
  className="sc-bczRLJ pEKWW"
  color="primary"
  fullWidth={false}
  onClick={[Function]}
  type="button"
  variant="contained"
>
  Docs
</button>
`;

exports[`Storyshots Button Full Width 1`] = `
<button
  className="sc-bczRLJ ovjnp"
  color="primary"
  fullWidth={true}
  type="button"
>
  FullWidth
</button>
`;

exports[`Storyshots Button Outlined 1`] = `
<button
  className="sc-bczRLJ gcMdhw"
  color="primary"
  type="button"
  variant="outlined"
>
  Outlined
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="sc-bczRLJ pEKWW"
  color="primary"
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Secondary 1`] = `
<button
  className="sc-bczRLJ eqltnE"
  color="secondary"
  type="button"
>
  Secondary
</button>
`;

exports[`Storyshots IconButton Docs 1`] = `
<button
  className="sc-dkzDqf jSsIkJ"
  onClick={[Function]}
  type="button"
>
  <svg
    aria-label="削除"
    className="sc-gsnTZi fHfrxz"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M0 0h24v24H0V0z"
      fill="none"
    />
    <path
      d="M16 9v10H8V9h8m-1.5-6h-5l-1 1H5v2h14V4h-3.5l-1-1zM18 7H6v12c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7z"
    />
  </svg>
</button>
`;

exports[`Storyshots LoadingGuard Loading 1`] = `
<button
  onClick={[Function]}
>
  Open
</button>
`;

exports[`Storyshots LoadingSpinner Docs 1`] = `
<svg
  aria-hidden={true}
  className="sc-gsnTZi fHfrxz sc-ezWOiH iQVEVj"
  viewBox="0 0 24 24"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h24v24H0z"
    fill="none"
  />
  <path
    d="M12 4V1L8 5l4 4V6c3.31 0 6 2.69 6 6 0 1.01-.25 1.97-.7 2.8l1.46 1.46C19.54 15.03 20 13.57 20 12c0-4.42-3.58-8-8-8zm0 14c-3.31 0-6-2.69-6-6 0-1.01.25-1.97.7-2.8L5.24 7.74C4.46 8.97 4 10.43 4 12c0 4.42 3.58 8 8 8v3l4-4-4-4v3z"
  />
</svg>
`;

exports[`Storyshots Snackbar Docs 1`] = `
<div
  className="sc-jSMfEi jWoQFQ"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf cuBBgy"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    snackbar
  </div>
</div>
`;

exports[`Storyshots Snackbar Error 1`] = `
<div
  className="sc-jSMfEi foykBO"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf cuBBgy"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    Error snackbar
  </div>
</div>
`;

exports[`Storyshots Snackbar Info 1`] = `
<div
  className="sc-jSMfEi jWoQFQ"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf cuBBgy"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    Info snackbar
  </div>
</div>
`;

exports[`Storyshots Snackbar Long Text 1`] = `
<div
  className="sc-jSMfEi jWoQFQ"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf cuBBgy"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    long long long long long long long long long long long long long long long long long long long long text
  </div>
</div>
`;

exports[`Storyshots Snackbar Success 1`] = `
<div
  className="sc-jSMfEi hFqLKq"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf cuBBgy"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M11 7h2v2h-2zm0 4h2v6h-2zm1-9C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    Success snackbar
  </div>
</div>
`;

exports[`Storyshots Snackbar Warning 1`] = `
<div
  className="sc-jSMfEi fEGZKn"
>
  <div
    className="sc-hKMtZM bMIeuD"
  >
    <svg
      aria-hidden={true}
      className="sc-gsnTZi ezPgjj sc-gKXOVf dbkALG"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
      />
    </svg>
  </div>
  <div
    className="sc-eCYdqJ cEcEGe"
  >
    Warning snackbar
  </div>
</div>
`;

exports[`Storyshots Snackbar/SnackbarProvider Play 1`] = `
<div>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    info
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    success
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Popup
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Popup
  </button>
</div>
`;

exports[`Storyshots TextButton Docs 1`] = `
<button
  className="sc-bczRLJ pEKWW sc-iBkjds"
  color="primary"
  fullWidth={false}
  onClick={[Function]}
  type="button"
  variant="contained"
>
  TextButton
</button>
`;

exports[`Storyshots Tooltip Docs 1`] = `
<div
  className="sc-kDDrLX eEPViZ"
>
  <div
    className="sc-jqUVSM eUxobI"
    visibleOnHover={true}
  >
    <button
      className="sc-bczRLJ pEKWW sc-iBkjds"
      color="primary"
      type="button"
    >
      hover me
    </button>
    <span
      className="sc-papXJ eHFAGQ"
      color="primary"
    >
      tooltip sample
    </span>
  </div>
</div>
`;

exports[`Storyshots Tooltip With State 1`] = `
<div
  className="sc-kDDrLX eEPViZ"
>
  <div
    className="sc-jqUVSM jxbrWS"
    show={false}
  >
    <button
      className="sc-bczRLJ pEKWW sc-iBkjds"
      color="primary"
      onClick={[Function]}
      type="button"
    >
      click me
    </button>
    <span
      className="sc-papXJ eHFAGQ"
      color="primary"
    >
      tooltip
    </span>
  </div>
</div>
`;

exports[`Storyshots dialogs/AlertDialog Docs 1`] = `
<div
  aria-labelledby="dialog-alert-dialog__label"
  aria-modal="true"
  className="sc-evZas sc-hAZoDl frfsBo bQtIll"
  id="alert-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-dkzDqf jSsIkJ"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gsnTZi xUDog"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-iqcoie lXaAj"
    id="dialog-alert-dialog__label"
  >
    AlertDialog sample
  </h2>
  <div
    className="sc-crXcEl ciJvZT"
  >
    <div
      className="sc-breuTD cpwItu"
    >
      AlertDialog contents
    </div>
    <div
      className="sc-ksZaOG fkGuZo"
    >
      <button
        className="sc-bczRLJ fVfpgz sc-iBkjds"
        color="secondary"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots dialogs/ConfirmDialog Docs 1`] = `
<div
  aria-labelledby="dialog-confirm-dialog__label"
  aria-modal="true"
  className="sc-evZas sc-fnykZs frfsBo dwmfua"
  id="confirm-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-dkzDqf jSsIkJ"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gsnTZi xUDog"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-iqcoie lXaAj"
    id="dialog-confirm-dialog__label"
  >
    ConfirmDialog sample
  </h2>
  <div
    className="sc-crXcEl ciJvZT"
  >
    <div
      className="sc-breuTD cpwItu"
    >
      ConfirmDialog contents
    </div>
    <div
      className="sc-ksZaOG fkGuZo"
    >
      <button
        className="sc-bczRLJ fVfpgz sc-iBkjds"
        color="secondary"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        OK
      </button>
      <button
        className="sc-bczRLJ dUViAu sc-iBkjds"
        color="default"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots dialogs/CustomDialog Docs 1`] = `
<div
  aria-describedby="dialog-custom-dialog__described"
  aria-labelledby="dialog-custom-dialog__label"
  aria-modal="true"
  className="sc-evZas frfsBo"
  id="custom-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-dkzDqf jSsIkJ"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gsnTZi xUDog"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-iqcoie lXaAj"
    id="dialog-custom-dialog__label"
  >
    Custom dialog sample
  </h2>
  <div
    className="sc-crXcEl ciJvZT"
    id="dialog-custom-dialog__described"
  >
    Custom dialog contents
  </div>
</div>
`;

exports[`Storyshots dialogs/DialogProvider Play 1`] = `
<div>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Popup
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Alert
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Confirm
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Select
  </button>
  <button
    className="sc-bczRLJ pEKWW sc-iBkjds"
    color="primary"
    onClick={[Function]}
    type="button"
  >
    Custom
  </button>
</div>
`;

exports[`Storyshots dialogs/PopupDialog Docs 1`] = `
<div
  aria-labelledby="dialog-popup-dialog__label"
  aria-modal="true"
  className="sc-evZas frfsBo"
  id="popup-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-dkzDqf jSsIkJ"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gsnTZi xUDog"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-iqcoie lXaAj"
    id="dialog-popup-dialog__label"
  >
    PopupDialog sample
  </h2>
  <div
    className="sc-crXcEl ciJvZT"
  >
    <div
      className="sc-breuTD cpwItu"
    >
      PopupDialog contents
    </div>
  </div>
</div>
`;

exports[`Storyshots dialogs/SelectDialog Docs 1`] = `
<div
  aria-labelledby="dialog-select-dialog__label"
  aria-modal="true"
  className="sc-evZas sc-fEOsli frfsBo chQhCj"
  id="select-dialog"
  onClick={[Function]}
  role="dialog"
>
  <button
    className="sc-dkzDqf jSsIkJ"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="ダイアログを閉じる"
      className="sc-gsnTZi xUDog"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
      />
    </svg>
  </button>
  <h2
    className="sc-iqcoie lXaAj"
    id="dialog-select-dialog__label"
  >
    SelectDialog sample
  </h2>
  <div
    className="sc-crXcEl ciJvZT"
  >
    <div
      className="sc-breuTD cpwItu"
    >
      SelectDialog contents
    </div>
    <div
      className="sc-ksZaOG fkGuZo"
    >
      <button
        className="sc-bczRLJ fVfpgz sc-iBkjds"
        color="secondary"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        はい
      </button>
      <button
        className="sc-bczRLJ ovjnp sc-iBkjds"
        color="primary"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        いいえ
      </button>
      <button
        className="sc-bczRLJ dUViAu sc-iBkjds"
        color="default"
        fullWidth={true}
        onClick={[Function]}
        type="button"
      >
        キャンセル
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots forms/PasswordForm Docs 1`] = `
<div
  className="sc-ivTmOn hFOlIt"
>
  <label
    aria-describedby="password-form-describe"
    className="sc-idiyUo erKdek"
    htmlFor="password-form"
    inline={false}
    required={true}
  >
    PasswordForm
  </label>
  <div
    className="sc-dIouRR ooPSm"
  >
    <span
      id="password-form-describe"
    >
      半角英数6文字以上18文字以下で入力してください
    </span>
  </div>
  <div
    className="sc-bBrHrO etZQUQ"
  >
    <input
      className="sc-kgflAQ eKhdFi"
      hasError={false}
      id="password-form"
      name="password-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="password sample"
      readOnly={false}
      type="password"
      value="PasswordForm sample"
    />
    <button
      className="sc-dkzDqf jSsIkJ sc-fLlhyt"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="パスワードを表示する"
        className="sc-gsnTZi iXghoM"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
          fill="none"
        />
        <path
          d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots forms/TextForm Docs 1`] = `
<div
  className="sc-iIPllB bAFLdH"
>
  <label
    aria-describedby="text-form-describe"
    className="sc-idiyUo erKdek"
    htmlFor="text-form"
    inline={false}
    required={true}
  >
    TextForm
  </label>
  <div
    className="sc-dIouRR ooPSm"
  >
    <span
      id="text-form-describe"
    >
      登録したメールアドレスを入力してください
    </span>
  </div>
  <div
    className="sc-llJcti ihawGp"
  >
    <input
      className="sc-kgflAQ eKhdFi"
      hasError={false}
      id="text-form"
      name="text-form-docs"
      onBlur={[Function]}
      onChange={[Function]}
      placeholder="input sample"
      readOnly={false}
      type="text"
      value="TextForm sample"
    />
    <button
      className="sc-dkzDqf jSsIkJ sc-cxabCf"
      onClick={[Function]}
      type="button"
    >
      <svg
        aria-label="text-form-docsの入力を削除する"
        className="sc-gsnTZi iXghoM"
        role="img"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M0 0h24v24H0z"
          fill="none"
        />
        <path
          d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`Storyshots inputs/InputBase Docs 1`] = `
<input
  className="sc-kgflAQ eKhdFi"
  hasError={false}
  id="input-base"
  name="input-base-docs"
  type="text"
  value="input base sample"
/>
`;

exports[`Storyshots inputs/PasswordInput Docs 1`] = `
<div
  className="sc-bBrHrO etZQUQ"
>
  <input
    className="sc-kgflAQ eKhdFi"
    hasError={false}
    id="password-input"
    name="password-input-docs"
    type="password"
    value="password input sample"
  />
  <button
    className="sc-dkzDqf jSsIkJ sc-fLlhyt"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="パスワードを表示する"
      className="sc-gsnTZi iXghoM"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0zm0 0h24v24H0V0z"
        fill="none"
      />
      <path
        d="M12 6c3.79 0 7.17 2.13 8.82 5.5-.59 1.22-1.42 2.27-2.41 3.12l1.41 1.41c1.39-1.23 2.49-2.77 3.18-4.53C21.27 7.11 17 4 12 4c-1.27 0-2.49.2-3.64.57l1.65 1.65C10.66 6.09 11.32 6 12 6zm-1.07 1.14L13 9.21c.57.25 1.03.71 1.28 1.28l2.07 2.07c.08-.34.14-.7.14-1.07C16.5 9.01 14.48 7 12 7c-.37 0-.72.05-1.07.14zM2.01 3.87l2.68 2.68C3.06 7.83 1.77 9.53 1 11.5 2.73 15.89 7 19 12 19c1.52 0 2.98-.29 4.32-.82l3.42 3.42 1.41-1.41L3.42 2.45 2.01 3.87zm7.5 7.5l2.61 2.61c-.04.01-.08.02-.12.02-1.38 0-2.5-1.12-2.5-2.5 0-.05.01-.08.01-.13zm-3.4-3.4l1.75 1.75c-.23.55-.36 1.15-.36 1.78 0 2.48 2.02 4.5 4.5 4.5.63 0 1.23-.13 1.77-.36l.98.98c-.88.24-1.8.38-2.75.38-3.79 0-7.17-2.13-8.82-5.5.7-1.43 1.72-2.61 2.93-3.53z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots inputs/TextArea Docs 1`] = `
<textarea
  className="sc-gicCDI hGtSuP"
  hasError={false}
  id="TextArea"
  name="text-area-docs"
  value="TextArea sample"
/>
`;

exports[`Storyshots inputs/TextInput Docs 1`] = `
<div
  className="sc-llJcti ihawGp"
>
  <input
    className="sc-kgflAQ eKhdFi"
    hasError={false}
    id="text-input"
    name="text-input-docs"
    type="text"
    value="text input sample"
  />
  <button
    className="sc-dkzDqf jSsIkJ sc-cxabCf"
    onClick={[Function]}
    type="button"
  >
    <svg
      aria-label="text-input-docsの入力を削除する"
      className="sc-gsnTZi iXghoM"
      role="img"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M0 0h24v24H0z"
        fill="none"
      />
      <path
        d="M14.59 8L12 10.59 9.41 8 8 9.41 10.59 12 8 14.59 9.41 16 12 13.41 14.59 16 16 14.59 13.41 12 16 9.41 14.59 8zM12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"
      />
    </svg>
  </button>
</div>
`;

exports[`Storyshots utils/Divider Docs 1`] = `
<hr
  className="sc-bZkfAO dwdvOp"
/>
`;
